1.12.4
------
ODBC escape values for times used in time values so they work with any database.

Session will not throw an exception when sending a message without a MsgType.

Added NetworkStatusReport and NetworkStatusRequest messages fix FIX 4.4.

.NET SessionID object can be constructed with field objects.

Fixed repeating groups in ruby which where incorrectly instantiating arrays
indicating sorting order.

Fixed crashes in .NET due to logger being called after going out of scope.

Fixed crashes in gcc due to different allocators being used in user application
vs QuickFIX library by the FieldMap.

Disposing an initiator or acceptor in .NET will also call stop.

1.12.3
------
A logon will now be sent immediately after initiator establishes a connection.
Previously we were waiting up to 1 second before sending a logon.

PersistMessages configuration setting will not store any messages when sent to Y.
This is useful for sessions where you never want to do a resend request. Mostly for
high bandwidth sessions.

.NET field objects have static members for each of their enumeration values.
This is equivalent to the Java implementation. (i.e., OrderSide.BUY).

Fixed bugs in python and ruby APIs where objects passed into Initiator or
Acceptor were being garbage collected to early causing random crashed.
This was due to Swig not creating placeholders for these objects to live.

Additional global logging indicated when an initiator/acceptor is created/destroyed,
and started/stopped.  Global log also with log messages that do not belong to any
loaded sessions.

Configuration settings are now case insensitive (the keys, not the values).

Underlying socket exception is provided if acceptor cannot be created.

ODBC escape sequences are used for time columns so correct format is always
sent to the underlying database.

Fixed problem where file descriptors were not being released in ThreadedSocketInitiator
due to uninitialized variable.
